<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_search"
          android:title="@string/menu_search"
          android:icon="@drawable/action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="com.actionbarsherlock.widget.SearchView"/>
    <item
            android:id="@+id/add_download"
            android:icon="@drawable/content_new"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/add_download"/>
    <item
            android:id="@+id/settings"
            android:icon="@drawable/action_settings"
            android:showAsAction="never"
            android:title="@string/settings"/>
    <item
            android:id="@+id/info"
            android:icon="@drawable/action_about"
            android:showAsAction="never"
            android:title="@string/info"/>
    <item
            android:id="@+id/feedback"
            android:icon="@drawable/content_email"
            android:showAsAction="never"
            android:title="@string/feedback"/>
</menu>