<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
            android:id="@+id/uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uri"
            android:inputType="textUri"/>
    <EditText
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_name"
            android:inputType="text"/>
    <EditText
            android:id="@+id/file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_path"
            android:inputType="text"/>
</LinearLayout>